feat: enable avatar
